# effective-agents-langchain

./: README.md  pyproject.toml  setup.sh
effective_agent_patterns_langchain/: 0-augmented-llm-langgraph.py  0-augmented-llm.py  1-prompt-chaining.py  2-routing.py  3-parallelization.py  4-orchestrator.py  5-evaluator-optimizer.py  6-autonomous-agents.py  __init__.py
