[project]
name = "effective-agent-patterns"
version = "0.1.0"
description = "Examples and patterns for building effective AI agents"
requires-python = ">=3.12"
dependencies = [
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "langchain",
    "langgraph"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["effective_agent_patterns_langchain"]

[tool.uv]
dev-dependencies = [] 
